# philosophy-web

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/agents/: alvin.md  cyril.md  encyclopedist.md  mu-043.md  reconciler.md  sophia.md
.claude/commands/: build-encyclopedia.md  claim.md  debate.md  encyclopedify.md  import-argument.md  new-character.md  reconcile.md  treatise.md
book/: .gitignore  encyclopedia.tex
graph/: README.md  web.dot
patterns/: _README.md  analogy.md  best-explanation.md  cause-to-effect.md  consequences.md  example.md  expert-opinion.md  sign.md  thought-experiment.md
proposals/: flag-integrity-findings.md  headword-rename.md  merge-posing-gap-vs-phenomenal-concept-isolation.md  merge-traversable-vs-cognitive-closure.md  pattern-audit.md
schemas/: _README.md  _style.md  argument.md  character.md  claim.md  concept.md  position.md  question.md  source.md
scripts/: apply_headwords.py  book.py  graph.py  lint.py  migrate_links.py  pre-commit  similar.py  weblinks.py
scripts/bookgen/: README.md  __init__.py  __main__.py  cli.py  compile.py  config.py  document.py  glyphs.py  inline.py  latex.py  markdown.py  nodes.py  templates.py
transcripts/: 2026-06-03-substrate-independence.md  2026-06-09-ai-own-hard-problem.md
web/: INDEX.md  README.md
web/arguments/: ability-hypothesis.md  access-symmetry-rebuttal.md  acquaintance-hypothesis.md  actual-possible-seam.md  agent-causation-certificate.md  ai-hard-problem-from-self-model-architecture.md  ambient-consciousness-collapse.md  anti-zombie-parity.md  chinese-room.md  (+109 more)
(+507 files in other folders)
